--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -7,7 +7,6 @@ li {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
 	background-color:#324668;
 	margin: 30px auto;
 	font-size: 20px;
@@ -17,7 +16,7 @@ button {
 	background-color: #2a3c59;
 	border: 1px solid #e2ca28;
 	color: #e2ca28;
-	margin: 0 20px;
+	margin: 0 30px 0 10px;
 	width: 30px;
 	height: 30px;
 }
